src/App.css
@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap');

*

{
  font-family: 'Poppins', sans-serif;
}

:root {
  --background : #c6cbce;
  --main: #afb55d;
  --accent: #253e5c;
  --right: #00d977;
  --wrong: #ed4337;
}

body {
  margin: 0;
  caret-color: transparent;
  overflow: hidden;
}

.App {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  flex-direction: column;
}

.title {
  position: sticky;
  top: 0;
  width: 100%;
  height: 12vh;
  background-color: var(--main);
  color: black;
}

img {
  transition: all 0.5s ease-in;
  width: 100%;
  height: 100%;
}

.imagecontainer {
  margin: 5vh;
  background-color: var(--main);
  padding: 6px;
  border-radius: 10px;
  margin-bottom: 0;
  padding-bottom: 0;
}

.buttons {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.guessbuttons {
  outline: none;
  border: none;
  color: white;
  font-size: 16px;
  border-radius: 10px;
  max-width: 300px;
  width: 100%;
  height: 10vh;
  margin: 5px;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  cursor: pointer;
  transition: all 0.2s ease-out;
}

.score {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin: 0;
}

h2 {
  position: absolute;
  bottom: 0;
  margin: 0;
  color: var(--accent);
}

.plantviewcontainer {
  position: absolute;
  display: flex;
  flex-direction: column;
  max-width: 50vw;
  max-height: 50vh;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  margin: auto;
  background-color: var(--main);
  border: 1px solid rgba(0, 0, 0, 0.5);
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 10px;
  padding-bottom: 0px;
  border-radius: 15px;
  z-index: 2;
  display: none;
  transition: all 0.3s ease-in;
}

a {
  font-size: 15px;
  color: white;
  font-weight: bold;
  cursor: pointer;
  background-color: var(--accent);
  padding: 5px;
  border-radius: 10px;
  text-decoration: none;
}

.plantviewimgcontainer {
  height: 40vh;
  margin-bottom: 10px;
}

.plantviewimgcontainer img {
  object-fit: cover;
  border-radius: 10%;
}

.plantviewcontainer p {
  font-size: 14px;
  font-weight: bold;
  margin-top: 5px;
  margin-bottom: 5px;
}

.plantviewcontainer button {
  position: absolute;
  right: 0;
  top: 0;
  border-radius: 100%;
  border: none;
  background-color: var(--accent);
  color: white;
  font-size: 15px;
  font-weight: bolder;
  margin: 2px;
  width: 30px;
  height: 30px;
}

.imagedots {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  margin: 0; 
}

.dot {
  width: 15px;
  height: 15px;
  background-color: var(--main);
  margin: 3px;
  border-radius: 100%;
}

.incrementcontainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.incrementbuttons {
    width: 10%;
    margin: 5px;
    font-size: 15px;
    border-radius: 10%;
    outline: none;
    border: none;
    background-color: var(--main);
    color: var(--accent);
}

.github {
  position: absolute;
  bottom: 0;
  left: 0;
  cursor: pointer;
}

.togglepopup {
  position: absolute;
  right: 10px;
  top: 35%;
  display: none;
  width: 40px;
  height: 40px;
  border-radius: 15px;
  border: none;
  background-color: var(--accent);
}

.backdropfilter {
  position: absolute;
  width: 100vw;
  height: 100vh;
  z-index: 1;
  backdrop-filter: blur(4px);
  display: none;
}

@media screen and (max-width: 400px){
    .guessbuttons {
      width: 30%;
      font-size: 12px;
    }

    .incrementbuttons {
      border-radius: 20%;
    }
}

